# distill

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md
.claude/memory/: MEMORY.md  feedback-workflow.md  project-state.md  tech-decisions.md  user-profile.md
backend/: Procfile  pyproject.toml  railway.toml  requirements.txt
backend/src/distill/: api.py  db.py  digest_orchestrator.py  email_digest_service.py  firebase_client.py  main.py  push_notification_service.py  resend_client.py  scheduler_worker.py  scheduling.py  supabase_db.py  synthesis_engine.py
backend/src/distill.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_digest_orchestrator.py  test_email_digest_service.py  test_push_notification_service.py  test_resend_client.py  test_scheduler_worker.py  test_scheduling.py  test_supabase_db.py  test_synthesis_engine.py  test_trending.py
docs/: PRD.md
docs/adr/: 0001-railway-worker-over-serverless.md  0002-partial-digest-on-topic-failure.md  0003-web-client-and-email-delivery.md  0004-trending-front-page.md
docs/agents/: domain.md
docs/deploy/: PROD_ENV.md
docs/superpowers/plans/: 2026-06-10-distill-web-backend.md  (+1 more)
ios/: README.md  project.yml
ios/Distill.xcodeproj/: project.pbxproj
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/migrations/: 20260602000000_initial_schema.sql  20260610000000_web_email_auth.sql  20260611000000_trending.sql
web/: package-lock.json  package.json
web/scripts/: screenshots.mjs
web/src/: middleware.ts  proxy.ts
web/src/app/: page.tsx  (+2 more)
(+44 files in other folders)
